LDEV-4605 adding missing country/territory
I forgot to include BQ = Bonaire, Saint Eustatius and Saba. Glad no one noticed ;-)

--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -622,6 +622,7 @@ country.BL=Saint Barthélemy
 country.BM=Bermuda
 country.BN=Brunei Darussalam
 country.BO=Bolivia
+country.BQ=Bonaire, Saint Eustatius and Saba
 country.BR=Brazil
 country.BS=Bahamas
 country.BT=Bhutan
