--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -862,6 +862,7 @@ country.BL=Saint Barthélemy
 country.BM=Bermuda
 country.BN=Brunei Darussalam
 country.BO=Bolivia
+country.BQ=Bonaire, Saint Eustatius and Saba
 country.BR=Brazil
 country.BS=Bahamas
 country.BT=Bhutan
