--- a/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:51:10 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Jul 03 00:47:33 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -335,7 +335,7 @@ label.tab.advanced.split.desc  =[0] instancias de esta clase se pueden crear y c
 label.tab.conditions.dependencies  =Dependencias
 label.tab.conditions.dependencies.desc  =Seleccione una lecci\u00f3n que los estudiantes tendr\u00e1n que completar antes de que puedan ver la lecci\u00f3n que est\u00e1 a punto de crear.
 label.tab.conditions.timelimit  =Limitaciones de tiempo
-label.tab.conditions.timelimit.desc  =Establezca el n\u00famero de d\u00edas que la lecci\u00f3n estar\u00e1 disponible para los estudiantes. Despu\u00e9s de este per\u00edodo ya no se mostrar\u00e1 la lecci\u00f3n. Si el tiempo se debe contar desde el momento en que el estudiante comienza la lecci\u00f3n, seleccione la opci\u00f3n de l\u00edmite de tiempo individual.
+label.tab.conditions.timelimit.desc  =Establezca el n\u00famero de d\u00edas que la lecci\u00f3n estar\u00e1 disponible. Despu\u00e9s de este per\u00edodo ya no se mostrar\u00e1 la lecci\u00f3n. Si el tiempo se debe contabilizar desde el momento en que el estudiante comienza la lecci\u00f3n, seleccione la opci\u00f3n de l\u00edmite de tiempo individual. <b>Si esta tambi\u00e9n programando la lecci\u00f3n, entonces solo se puede configurar la opci\u00f3n de l\u00edmite de tiempo individual</b>.
 label.tab.conditions.timelimit.days  =N\u00famero de d\u00edas:
 label.tab.conditions.timelimit.individual  =Es este l\u00edmite de tiempo para cada individuo?
 label.tab.conditions.enable  =Activar
@@ -756,6 +756,259 @@ label.post.anonomously  =Publicar an\u00f3nimamente
 label.anonymous  =An\u00f3nimo
 label.anonymous.tooltip  =Active "Publicar an\u00f3nimamente" para ocultar su nombre a otros estudiantes. Solo los instructores podr\u00e1n ver su nombre.
 authoring.fla.page.ld.title.desc  =Haga clic para mostrar los detalles de la secuencia
+label.start  =Comienzo:
+label.end  =Fin:
+error.lesson.with.scheduled.end.only.have.individual.limits  =Las lecciones con una fecha de finalizaci\u00f3n programada solo pueden tener l\u00edmites de tiempo individuales, no un l\u00edmite de tiempo para toda la clase.
+error.lesson.end.date.must.be.after.start.date  =La fecha de finalizaci\u00f3n programada debe ser posterior a la fecha de inicio.
+country.AD  =Andorra
+country.AE  =Emiratos \u00c1rabes Unidos
+country.AF  =Afganist\u00e1n
+country.AG  =Antigua y Barbuda
+country.AI  =Anguila
+country.AL  =Albania
+country.AM  =Armenia
+country.AO  =Angola
+country.AQ  =Ant\u00e1rtida
+country.AR  =Argentina
+country.AS  =Samoa Americana
+country.AT  =Austria
+country.AU  =Australia
+country.AW  =Aruba
+country.AX  =Islas \u00c5land
+country.AZ  =Azerbaiy\u00e1n
+country.BA  =Bosnia y Herzegovina
+country.BB  =Barbados
+country.BD  =Bangladesh
+country.BE  =B\u00e9lgica
+country.BF  =Burkina Faso
+country.BG  =Bulgaria
+country.BH  =Bahrein
+country.BI  =Burundi
+country.BJ  =Benin
+country.BL  =Saint Barth\u00e9lemy
+country.BM  =Bermuda
+country.BN  =Brunei Darussalam
+country.BO  =Bolivia
+country.BR  =Brasil
+country.BS  =Bahamas
+country.BT  =But\u00e1n
+country.BV  =Islas Bouvet
+country.BW  =Botswana
+country.BY  =Bielorrusia
+country.BZ  =Belice
+country.CA  =Canad\u00e1
+country.CC  =Islas Cocos
+country.CD  =Congo, Rep\u00fablica Democr\u00e1tica del
+country.CF  =Rep\u00fablica Centroafricana
+country.CG  =Congo
+country.CH  =Suiza
+country.CI  =Costa de Marfil
+country.CK  =Islas Cook
+country.CL  =Chile
+country.CM  =Camer\u00fan
+country.CN  =China
+country.CO  =Colombia
+country.CR  =Costa Rica
+country.CU  =Cuba
+country.CV  =Cabo Verde
+country.CX  =Islas de Navidad
+country.CW  =Cura\u00e7ao
+country.CY  =Chipre
+country.CZ  =Rep\u00fablica Checa
+country.DE  =Alemania
+country.DJ  =Djibouti
+country.DK  =Dinamarca
+country.DM  =Dominica
+country.DO  =Rep\u00fablica Dominicana
+country.DZ  =Argelia
+country.EC  =Ecuador
+country.EE  =Estonia
+country.EG  =Egipto
+country.EH  =Sahara Occidental
+country.ER  =Eritrea
+country.ES  =Espa\u00f1a
+country.ET  =Etiop\u00eda
+country.FI  =Finlandia
+country.FJ  =Fiji
+country.FK  =Islas Malvinas
+country.FM  =Micronesia
+country.FO  =Islas Faroe
+country.FR  =Francia
+country.GA  =Gab\u00f3n
+country.GB  =Reino Unido
+country.GD  =Granada
+country.GE  =Georgia
+country.GF  =Guyana Francesa
+country.GG  =Guernsey
+country.GH  =Ghana
+country.GI  =Gibraltar
+country.GL  =Groenlandia
+country.GM  =Gambia
+country.GN  =Guinea
+country.GP  =Guadalupe
+country.GQ  =Guinea Ecuatorial
+country.GR  =Grecia
+country.GS  =Georgia del Sur e Islas Sandwich del Sur
+country.SS  =Sud\u00e1n del Sur
+country.GT  =Guatemala
+country.GU  =Guam
+country.GW  =Guinea-Bissau
+country.GY  =Guyana
+country.HK  =Hong Kong
+country.HM  =Islas Heard y McDonald
+country.HN  =Honduras
+country.HR  =Croacia
+country.HT  =Hait\u00ed
+country.HU  =Hungr\u00eda
+country.ID  =Indonesia
+country.IE  =Irlanda
+country.IL  =Israel
+country.IM  =Isla de Man
+country.IN  =India
+country.IO  =Territorio Brit\u00e1nico del Oc\u00e9ano \u00cdndico
+country.IQ  =Irak
+country.IR  =Ir\u00e1n
+country.IS  =Islandia
+country.IT  =Italia
+country.JE  =Jersey
+country.JM  =Jamaica
+country.JO  =Jordania
+country.JP  =Jap\u00f3n
+country.KE  =Kenia
+country.KG  =Kirguist\u00e1n
+country.KH  =Camboya
+country.KI  =Kiribati
+country.KM  =Comoras
+country.KN  =San Crist\u00f3bal Nevis
+country.KP  =Corea del Norte
+country.KR  =Corea del Sur
+country.KW  =Kuwait
+country.KY  =Islas Caim\u00e1n
+country.KZ  =Kazajst\u00e1n
+country.LA  =Laos
+country.LB  =L\u00edbano
+country.LC  =Santa Luc\u00eda
+country.LI  =Liechtenstein
+country.LK  =Sri Lanka
+country.LR  =Liberia
+country.LS  =Lesotho
+country.LT  =Lituania
+country.LU  =Luxemburgo
+country.LV  =Latvia
+country.LY  =Jamahiriya \u00c1rabe Libia
+country.MA  =Marruecos
+country.MC  =M\u00f3naco
+country.MD  =Moldovia
+country.ME  =Montenegro
+country.MF  =San Mart\u00edn
+country.MG  =Madagascar
+country.MH  =Islas Marshall
+country.MK  =Macedonia
+country.ML  =Mali
+country.MM  =Myanmar
+country.MN  =Mongolia
+country.MO  =Macao
+country.MP  =Islas Marianas del Norte
+country.MQ  =Martinica
+country.MR  =Mauritania
+country.MS  =Montserrat
+country.MT  =Malta
+country.MU  =Mauricio
+country.MV  =Maldivas
+country.MW  =Malawi
+country.MX  =M\u00e9xico
+country.MY  =Malasia
+country.MZ  =Mozambique
+country.NA  =Namibia
+country.NC  =Nueva Caledonia
+country.NE  =N\u00edger
+country.NF  =Islas Norfolk
+country.NG  =Nigeria
+country.NI  =Nicaragua
+country.NL  =Holanda
+country.NO  =Noruega
+country.NP  =Nepal
+country.NR  =Naur\u00fa
+country.NU  =Niue
+country.NZ  =Nueva Zelandia
+country.OM  =Om\u00e1n
+country.PA  =Panam\u00e1
+country.PE  =Per\u00fa
+country.PF  =Polinesia Francesa
+country.PG  =Pap\u00faa Nueva Guinea
+country.PH  =Filipinas
+country.PK  =Pakist\u00e1n
+country.PL  =Polonia
+country.PM  =San Pedro y Miquelon
+country.PN  =Pitcairn
+country.PR  =Puerto Rico
+country.PS  =Palestina
+country.PT  =Portugal
+country.PW  =Palau
+country.PY  =Paraguay
+country.QA  =Qatar
+country.RE  =Reuni\u00f3n
+country.RO  =Rumania
+country.RS  =Serbia
+country.RU  =Federaci\u00f3n Rusa
+country.RW  =Ruanda
+country.SA  =Arabia Saudita
+country.SB  =Islas Salom\u00f3n
+country.SC  =Seychelles
+country.SD  =Sud\u00e1n
+country.SE  =Suecia
+country.SG  =Singapur
+country.SX  =Sint Maarten (parte neerlandesa)
+country.SH  =Santa Helena
+country.SI  =Eslovenia
+country.SJ  =Islas Svalbard y Jan Mayen
+country.SK  =Eslovaquia
+country.SL  =Sierra Leona
+country.SM  =San Marino
+country.SN  =Senegal
+country.SO  =Somal\u00eda
+country.SR  =Surinam
+country.ST  =Santo Tom\u00e9 y Pr\u00edncipe
+country.SV  =El Salvador
+country.SY  =Siria
+country.SZ  =Swazilandia
+country.TC  =Islas Turcas y Caicos
+country.TD  =Chad
+country.TF  =Territorios Franceses del Sur
+country.TG  =Togo
+country.TH  =Tailandia
+country.TJ  =Tayikist\u00e1n
+country.TK  =Tokelau
+country.TL  =Timor-Leste
+country.TM  =Turkmenist\u00e1n
+country.TN  =T\u00fanez
+country.TO  =Tonga
+country.TR  =Turqu\u00eda
+country.TT  =Trinidad y Tobago
+country.TV  =Tuvalu
+country.TW  =Taiw\u00e1n
+country.TZ  =Tanzania
+country.UA  =Ucrania
+country.UG  =Uganda
+country.UM  =United States Minor Outlying Islands
+country.US  =Estados Unidos
+country.UY  =Uruguay
+country.UZ  =Uzbekistan
+country.VA  =El Vaticano
+country.VC  =San Vincente y Las Granadinas
+country.VE  =Venezuela
+country.VG  =Islas V\u00edrgenes (Brit\u00e1n\u00edcas)
+country.VI  =Islas V\u00edrgenes (Americanas)
+country.VN  =Vietnam
+country.VU  =Vanuatu
+country.WF  =Islas Wallis y Futuna
+country.WS  =Samoa
+country.YE  =Yemen
+country.YT  =Mayotte
+country.ZA  =Sud\u00e1frica
+country.ZM  =Zambia
+country.ZW  =Zimbawe
+country.BQ  =Bonaire, San Eustaquio y Saba
 
 
-#======= End labels: Exported 750 labels for es ES =====
+#======= End labels: Exported 1003 labels for es ES =====
