LDEV-4611 Release marks auto pushes marks to gradebook now
Release marks needs to be a "state" within the tool rather than
something that is transient. If this option is marks are already
released, then marks entered in SF monitor should be auto pushed to
monitor and disclosed to students via SF learner.

Also once you release marks you should not be able to unrelease them.

View all marks page should also state the release marks state.

--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
@@ -82,6 +82,7 @@ label.session.name  =Session name
 label.count  =Count
 label.no.user.available  =No data
 msg.mark.released  =Marks in {0} have been released.
+label.marks.released  =Marks have been released
 error.title.blank  =Title can not be blank.
 label.authoring.advanced.reflectOnActivity  =Add a notebook at end of Submit Files with the following instructions:
 error.reflection.emtpy  =Please input Notebook entry
