LDEV-4501 adding missing labels

--- a/lams_learning/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:51:49 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Jul 03 17:57:27 CST 2018 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -182,6 +182,9 @@ message.kumalive.poll.release.voters.confirm  =\u00bfEst\u00e1 seguro que quiere
 label.kumalive.poll.missing.voters  =Sin votos
 label.kumalive.poll.results  =Resultados
 label.kumalive.poll.votes.total  =Votos totales
+audit.activity.started  =Estudiante {0} ({1}) comenz\u00f3 actividad {2} ({3})
+audit.activity.stopped  =Estudiante {0} ({1}) complet\u00f3 actividad {2} ({3})
+audit.learner.lesson.complete  =Estudiante {0} ({1}) complet\u00f3 lecci\u00f3n {2} ({3})
 
 
-#======= End labels: Exported 176 labels for es ES =====
+#======= End labels: Exported 179 labels for es ES =====
