--- a/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:51:50 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue Jul 03 17:58:06 CST 2018 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -182,6 +182,9 @@ message.kumalive.poll.release.voters.confirm  =Are you sure you want to show pol
 label.kumalive.poll.missing.voters  =Not voted
 label.kumalive.poll.results  =Results
 label.kumalive.poll.votes.total  =Total votes
+audit.activity.started  =Learner {0} ({1}) started activity {2} ({3})
+audit.activity.stopped  =Learner {0} ({1}) stopped activity {2} ({3})
+audit.learner.lesson.complete  =Learner {0} ({1}) completed lesson {2} ({3})
 
 
-#======= End labels: Exported 176 labels for en AU =====
+#======= End labels: Exported 179 labels for en AU =====
