--- a/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_admin/conf/language/lams/ApplicationResources_en_AU.properties
@@ -567,6 +567,7 @@ label.type.mark.released  =Mark Released
 label.type.learner.content.updated  =Learner's Entry Modified
 label.type.learner.content.show.hide  =Learner's Entry Shown/Hidden
 label.type.unknown  =Unknown
+label.type.tool.mark.released  =Mark Released in tool
 label.area.lesson  =Lesson
 label.area.security  =Security
 label.area.notification  =Notification
