LDEV-4607 LDEV-4593 and LDEV-4614
Adding policy and consent labels, No score labels for gradebook in authoring, removing country labels as they moved to lams_common

--- a/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 05 09:28:49 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 05 10:04:38 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -760,6 +760,25 @@ label.start  =Comienzo:
 label.end  =Fin:
 error.lesson.with.scheduled.end.only.have.individual.limits  =Las lecciones con una fecha de finalizaci\u00f3n programada solo pueden tener l\u00edmites de tiempo individuales, no un l\u00edmite de tiempo para toda la clase.
 error.lesson.end.date.must.be.after.start.date  =La fecha de finalizaci\u00f3n programada debe ser posterior a la fecha de inicio.
+label.policies.title  =Pol\u00edticas
+label.agree.to.policies.before.proceeding  =Por favor acepte todas las pol\u00edticas antes de continuar
+label.consent.required  =El consentimiento es requerido
+label.agree.to.policy  =Estoy de acuerdo con la pol\u00edtica
+label.policy.name  =Nombre de pol\u00edtica
+label.policy.type  =Tipo de pol\u00edtica
+label.policy.type.site  =Pol\u00edtica del sitio
+label.policy.type.privacy  =Pol\u00edtica de privacidad
+label.policy.type.third.party  =Pol\u00edtica de terceros
+label.policy.type.other  =Otra pol\u00edtica
+label.summary  =Resumen
+label.full.policy  =Pol\u00edtica completa
+label.consent  =Consentimiento
+label.policies.consents  =Pol\u00edticas y consentimientos
+label.version  =Versi\u00f3n
+label.consented  =\u00bfConsentido?
+label.consented.on  =Consentido en
+label.policy.details  =Detalles de la pol\u00edtica
+authoring.fla.page.prop.gradebook.none  =Sin puntuaci\u00f3n
 
 
-#======= End labels: Exported 754 labels for es ES =====
+#======= End labels: Exported 773 labels for es ES =====
