--- a/lams_central/conf/language/lams/ApplicationResources.properties
+++ b/lams_central/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:51:11 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 05 10:04:39 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -599,7 +599,6 @@ authoring.fla.page.prop.groups.equal  =Equal group sizes?
 authoring.fla.page.prop.groups.view.learners  =View learners before selection?
 authoring.fla.page.prop.groups.name  =Name Groups
 authoring.fla.page.prop.gradebook  =Gradebook output:
-authoring.fla.page.prop.gradebook.none =No score
 authoring.fla.page.prop.description  =Description:
 authoring.fla.page.prop.gate.type  =Type:
 authoring.fla.page.prop.gate.type.condition  =Condition
@@ -757,6 +756,30 @@ label.post.anonomously  =Post anonymously
 label.anonymous  =Anonymous
 label.anonymous.tooltip  =Turn on "Post anonymously" to hide your name from other learners. Teachers will still be able to see your name.
 authoring.fla.page.ld.title.desc  =Click to display sequence details
+label.start  =Start:
+label.end  =End:
+error.lesson.with.scheduled.end.only.have.individual.limits  =Lessons with a scheduled end date can only have individual time limits, not a lesson time limit.
+error.lesson.end.date.must.be.after.start.date  =Scheduled end date must be after the start date.
+label.policies.title  =Policies
+label.agree.to.policies.before.proceeding  =Please agree to all the policies before proceeding
+label.consent.required  =Consent is required
+label.agree.to.policy  =I agree to the policy
+label.policy.name  =Policy name
+label.policy.type  =Policy type
+label.policy.type.site  =Site policy
+label.policy.type.privacy  =Privacy policy
+label.policy.type.third.party  =Third party policy
+label.policy.type.other  =Other policy
+label.summary  =Summary
+label.full.policy  =Full policy
+label.consent  =Consent
+label.policies.consents  =Policies and consents
+label.version  =Version
+label.consented  =Consented?
+label.consented.on  =Consented on
+label.policy.details  =Policy details
+authoring.fla.page.prop.gradebook.none  =No score
+
 
 #====== Templates	
 authoring.msg.close.cancel.save=Do you want to close this window without saving?	
@@ -812,8 +835,5 @@ authoring.tbl.template.description=Individual and Team Readiness Assessments fol
 authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions.	
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
-label.start=Start:
-label.end=End:
-error.lesson.with.scheduled.end.only.have.individual.limits=Lessons with a scheduled end date can only have individual time limits, not a lesson time limit.
-error.lesson.end.date.must.be.after.start.date=Scheduled end date must be after the start date.
-#======= End labels: Exported 750 labels for en AU =====
+
+#======= End labels: Exported 773 labels for en AU =====
