--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed Jun 13 23:51:11 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Thu Jul 05 10:04:39 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -756,6 +756,29 @@ label.post.anonomously  =Post anonymously
 label.anonymous  =Anonymous
 label.anonymous.tooltip  =Turn on "Post anonymously" to hide your name from other learners. Teachers will still be able to see your name.
 authoring.fla.page.ld.title.desc  =Click to display sequence details
+label.start  =Start:
+label.end  =End:
+error.lesson.with.scheduled.end.only.have.individual.limits  =Lessons with a scheduled end date can only have individual time limits, not a lesson time limit.
+error.lesson.end.date.must.be.after.start.date  =Scheduled end date must be after the start date.
+label.policies.title  =Policies
+label.agree.to.policies.before.proceeding  =Please agree to all the policies before proceeding
+label.consent.required  =Consent is required
+label.agree.to.policy  =I agree to the policy
+label.policy.name  =Policy name
+label.policy.type  =Policy type
+label.policy.type.site  =Site policy
+label.policy.type.privacy  =Privacy policy
+label.policy.type.third.party  =Third party policy
+label.policy.type.other  =Other policy
+label.summary  =Summary
+label.full.policy  =Full policy
+label.consent  =Consent
+label.policies.consents  =Policies and consents
+label.version  =Version
+label.consented  =Consented?
+label.consented.on  =Consented on
+label.policy.details  =Policy details
+authoring.fla.page.prop.gradebook.none  =No score
 
 #====== Templates	
 authoring.msg.close.cancel.save=Do you want to close this window without saving?	
@@ -804,26 +827,6 @@ authoring.error.application.exercise.must.have.100.percent=Application Exercise 
 authoring.error.application.exercise.not.blank.and.grade=Application Exercise {0} may not be blank and must have a grade.	
 authoring.label.grade=Grade	
 authoring.label.none=None	
-
-label.policies.title=Policies
-label.agree.to.policies.before.proceeding=Please agree to all the policies before proceeding
-label.consent.required=Consent is required
-label.agree.to.policy=I agree to the policy
-label.policy.name =Policy name
-label.policy.type =Policy type
-label.policy.type.site  =Site policy
-label.policy.type.privacy  =Privacy policy
-label.policy.type.third.party  =Third party policy
-label.policy.type.other  =Other policy
-label.summary  =Summary
-label.full.policy  =Full policy
-label.consent  =Consent
-label.policies.consents  =Policies and consents
-label.version =Version
-label.consented =Consented?
-label.consented.on =Consented on
-label.policy.details =Policy details
-
 	
 #=================== Specific to Team Based Learning (TBL) =========================#	
 authoring.tbl.template.title=Team Based Learning	
@@ -831,257 +834,5 @@ authoring.tbl.template.description=Individual and Team Readiness Assessments fol
 authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Question" to add more questions.	
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
-label.select.country=Select a country
-error.country.required=Country is required.
-country.AD=Andorra
-country.AE=United Arab Emirates
-country.AF=Afghanistan
-country.AG=Antigua And Barbuda
-country.AI=Anguilla
-country.AL=Albania
-country.AM=Armenia
-country.AO=Angola
-country.AQ=Antarctica
-country.AR=Argentina
-country.AS=American Samoa
-country.AT=Austria
-country.AU=Australia
-country.AW=Aruba
-country.AX=Åland Islands
-country.AZ=Azerbaijan
-country.BA=Bosnia And Herzegovina
-country.BB=Barbados
-country.BD=Bangladesh
-country.BE=Belgium
-country.BF=Burkina Faso
-country.BG=Bulgaria
-country.BH=Bahrain
-country.BI=Burundi
-country.BJ=Benin
-country.BL=Saint Barthélemy
-country.BM=Bermuda
-country.BN=Brunei Darussalam
-country.BO=Bolivia
-country.BQ=Bonaire, Saint Eustatius and Saba
-country.BR=Brazil
-country.BS=Bahamas
-country.BT=Bhutan
-country.BV=Bouvet Island
-country.BW=Botswana
-country.BY=Belarus
-country.BZ=Belize
-country.CA=Canada
-country.CC=Cocos (Keeling) Islands
-country.CD=Congo, The Democratic Republic Of The
-country.CF=Central African Republic
-country.CG=Congo
-country.CH=Switzerland
-country.CI=Côte D'Ivoire
-country.CK=Cook Islands
-country.CL=Chile
-country.CM=Cameroon
-country.CN=China
-country.CO=Colombia
-country.CR=Costa Rica
-country.CU=Cuba
-country.CV=Cape Verde
-country.CX=Christmas Island
-country.CW=Curaçao
-country.CY=Cyprus
-country.CZ=Czech Republic
-country.DE=Germany
-country.DJ=Djibouti
-country.DK=Denmark
-country.DM=Dominica
-country.DO=Dominican Republic
-country.DZ=Algeria
-country.EC=Ecuador
-country.EE=Estonia
-country.EG=Egypt
-country.EH=Western Sahara
-country.ER=Eritrea
-country.ES=Spain
-country.ET=Ethiopia
-country.FI=Finland
-country.FJ=Fiji
-country.FK=Falkland Islands (Malvinas)
-country.FM=Micronesia, Federated States Of
-country.FO=Faroe Islands
-country.FR=France
-country.GA=Gabon
-country.GB=United Kingdom
-country.GD=Grenada
-country.GE=Georgia
-country.GF=French Guiana
-country.GG=Guernsey
-country.GH=Ghana
-country.GI=Gibraltar
-country.GL=Greenland
-country.GM=Gambia
-country.GN=Guinea
-country.GP=Guadeloupe
-country.GQ=Equatorial Guinea
-country.GR=Greece
-country.GS=South Georgia And The South Sandwich Islands
-country.GT=Guatemala
-country.GU=Guam
-country.GW=Guinea-Bissau
-country.GY=Guyana
-country.HK=Hong Kong
-country.HM=Heard Island And Mcdonald Islands
-country.HN=Honduras
-country.HR=Croatia
-country.HT=Haiti
-country.HU=Hungary
-country.ID=Indonesia
-country.IE=Ireland
-country.IL=Israel
-country.IM=Isle Of Man
-country.IN=India
-country.IO=British Indian Ocean Territory
-country.IQ=Iraq
-country.IR=Iran, Islamic Republic Of
-country.IS=Iceland
-country.IT=Italy
-country.JE=Jersey
-country.JM=Jamaica
-country.JO=Jordan
-country.JP=Japan
-country.KE=Kenya
-country.KG=Kyrgyzstan
-country.KH=Cambodia
-country.KI=Kiribati
-country.KM=Comoros
-country.KN=Saint Kitts And Nevis
-country.KP=Korea, Democratic People's Republic Of
-country.KR=Korea, Republic Of
-country.KW=Kuwait
-country.KY=Cayman Islands
-country.KZ=Kazakhstan
-country.LA=Lao People's Democratic Republic
-country.LB=Lebanon
-country.LC=Saint Lucia
-country.LI=Liechtenstein
-country.LK=Sri Lanka
-country.LR=Liberia
-country.LS=Lesotho
-country.LT=Lithuania
-country.LU=Luxembourg
-country.LV=Latvia
-country.LY=Libyan Arab Jamahiriya
-country.MA=Morocco
-country.MC=Monaco
-country.MD=Moldova, Republic Of
-country.ME=Montenegro
-country.MF=Saint Martin
-country.MG=Madagascar
-country.MH=Marshall Islands
-country.MK=Macedonia, The Former Yugoslav Republic Of
-country.ML=Mali
-country.MM=Myanmar
-country.MN=Mongolia
-country.MO=Macao
-country.MP=Northern Mariana Islands
-country.MQ=Martinique
-country.MR=Mauritania
-country.MS=Montserrat
-country.MT=Malta
-country.MU=Mauritius
-country.MV=Maldives
-country.MW=Malawi
-country.MX=Mexico
-country.MY=Malaysia
-country.MZ=Mozambique
-country.NA=Namibia
-country.NC=New Caledonia
-country.NE=Niger
-country.NF=Norfolk Island
-country.NG=Nigeria
-country.NI=Nicaragua
-country.NL=Netherlands
-country.NO=Norway
-country.NP=Nepal
-country.NR=Nauru
-country.NU=Niue
-country.NZ=New Zealand
-country.OM=Oman
-country.PA=Panama
-country.PE=Peru
-country.PF=French Polynesia
-country.PG=Papua New Guinea
-country.PH=Philippines
-country.PK=Pakistan
-country.PL=Poland
-country.PM=Saint Pierre And Miquelon
-country.PN=Pitcairn
-country.PR=Puerto Rico
-country.PS=Palestinian Territory, Occupied
-country.PT=Portugal
-country.PW=Palau
-country.PY=Paraguay
-country.QA=Qatar
-country.RE=Réunion
-country.RO=Romania
-country.RS=Serbia
-country.RU=Russian Federation
-country.RW=Rwanda
-country.SA=Saudi Arabia
-country.SB=Solomon Islands
-country.SC=Seychelles
-country.SD=Sudan
-country.SE=Sweden
-country.SG=Singapore
-country.SX=Sint Maarten (Dutch part)
-country.SH=Saint Helena
-country.SI=Slovenia
-country.SJ=Svalbard And Jan Mayen
-country.SK=Slovakia
-country.SL=Sierra Leone
-country.SM=San Marino
-country.SN=Senegal
-country.SO=Somalia
-country.SR=Suriname
-country.SS=South Sudan
-country.ST=Sao Tome And Principe
-country.SV=El Salvador
-country.SY=Syrian Arab Republic
-country.SZ=Swaziland
-country.TC=Turks And Caicos Islands
-country.TD=Chad
-country.TF=French Southern Territories
-country.TG=Togo
-country.TH=Thailand
-country.TJ=Tajikistan
-country.TK=Tokelau
-country.TL=Timor-Leste
-country.TM=Turkmenistan
-country.TN=Tunisia
-country.TO=Tonga
-country.TR=Turkey
-country.TT=Trinidad And Tobago
-country.TV=Tuvalu
-country.TW=Taiwan
-country.TZ=Tanzania, United Republic Of
-country.UA=Ukraine
-country.UG=Uganda
-country.UM=United States Minor Outlying Islands
-country.US=United States
-country.UY=Uruguay
-country.UZ=Uzbekistan
-country.VA=Holy See (Vatican City State)
-country.VC=Saint Vincent And The Grenadines
-country.VE=Venezuela
-country.VG=Virgin Islands, British
-country.VI=Virgin Islands, U.S.
-country.VN=Viet Nam
-country.VU=Vanuatu
-country.WF=Wallis And Futuna
-country.WS=Samoa
-country.YE=Yemen
-country.YT=Mayotte
-country.ZA=South Africa
-country.ZM=Zambia
-country.ZW=Zimbabwe
 
-
-#======= End labels: Exported 749 labels for en AU =====
+#======= End labels: Exported 773 labels for en AU =====
